Added short report

--- a/report/conclusions.tex
+++ b/report/conclusions.tex
@@ -1,3 +1,6 @@
 \section{Conclusions}
 \label{section:conclusion}
 
+In this short report we have demonstrated how to apply ordinary Kriging to 
+interpolate the values of WiFi signal. We believe that given representative dataset Kriging
+can be used to build quite accurate radiomaps.
