--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,3 +1,11 @@
 \section{Introduction}
 \label{section:introduction}
 
+Building a radio map is often important for understanding 
+the coverage area. Geostatistical tools such as Kriging, 
+in turn, are useful for estimating the values at unknown 
+locations. In this short report, we present the results 
+for the interpolation of WiFi signal using Ordinary Kriging. 
+We first present the basic mathematics behind the Simple 
+Kriging and then show the results for the 
+interpolation of real data.
