--- a/report/paper.tex
+++ b/report/paper.tex
@@ -6,6 +6,8 @@
 
 \usepackage{float}
 
+\usepackage{float}
+
 \usepackage{cite}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -41,9 +43,12 @@
 
 \begin{document}
 \sloppy
-\title{Builting radio map with geostatics}
+\title{Building radio map with geostatistics}
 \maketitle
 \begin{abstract}
+Building a WiFi radio map is often useful to network engineers in order to understand 
+the network covarage. In this short report we play a bit with geostatistics to 
+create such radio map for an IEEE 802.11ac network deployed in an open-space.
 \end{abstract}
 
 \input intro.tex 
