--- a/report/results.tex
+++ b/report/results.tex
@@ -27,7 +27,7 @@ $\min E[(Y_0^*)^2]-2E[Y^*_0Y_0]+E[(Y_0)^2]$
 
 By substituting the $Y^*$ in the equation and rearranging the terms a bit:
 
-$\min \sum_{i=1}^{n}\sum_{j=1}^{n}\lambda_i\lambda_jE[Y_iY_j] - 2\sum_{i=1}^{n}E[Y_iY_0]+E[(Y_0)^2]$
+$\min \sum_{i=1}^{n}\sum_{j=1}^{n}\lambda_i\lambda_jE[Y_iY_j] - 2\sum_{i=1}^{n}\lambda_iE[Y_iY_0]+E[(Y_0)^2]$
 
 \begin{figure}[h!]
 \centering
